--- a/EX8/index.html
+++ b/EX8/index.html
@@ -2,84 +2,88 @@
 <html lang="en">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ex 8 - Jaume Curto</title>
     <script defer src="./js/codigo.js"></script>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container bg-dark">
         <div class="row">
             <div class="col">
                 <table class="w-25 p-3 mx-auto mt-3 bg-light">
                     <tr>
                         <td colspan="5">
-                            <input type="text" class="form-control w-100 p-3" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" id="calc">
+                            <input type="text" class="form-control w-100 fs-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" id="calc">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="5">
+                            <p class="fs-2" id="resultado"></p>
                         </td>
                     </tr>
                     <tr>
                         <td class="bg-secondary">
-                            <button type="button" class="btn btn-secondary btn-lg w-100 p-3" onclick="añadirNum9()">9</button>
+                            <button type="button" class="btn btn-secondary btn-lg w-100 p-3 botones" onclick="añadirNum9()">9</button>
                         </td>
                         <td class="bg-secondary">
-                            <button type="button" class="btn btn-secondary btn-lg w-100 p-3" onclick="añadirNum8()">8</button>
+                            <button type="button" class="btn btn-secondary btn-lg w-100 p-3 botones" onclick="añadirNum8()">8</button>
                         </td>
                         <td class="bg-secondary">
-                            <button type="button" class="btn btn-secondary btn-lg w-100 p-3" onclick="añadirNum7()">7</button>
+                            <button type="button" class="btn btn-secondary btn-lg w-100 p-3 botones" onclick="añadirNum7()">7</button>
                         </td>
                         <td colspan="2" class="bg-primary">
-                            <button type="button" class="btn btn-primary btn-lg w-100 p-3" onclick="vaciar()">DEL</button>
+                            <button type="button" class="btn btn-primary btn-lg w-100 p-3 botones" onclick="vaciar()">DEL</button>
                         </td>
                     </tr>
                     <tr>
                         <td class="bg-secondary">
-                            <button type="button" class="btn btn-secondary btn-lg w-100 p-3" onclick="añadirNum6()">6</button>
+                            <button type="button" class="btn btn-secondary btn-lg w-100 p-3 botones" onclick="añadirNum6()">6</button>
                         </td>
                         <td class="bg-secondary">
-                            <button type="button" class="btn btn-secondary btn-lg w-100 p-3" onclick="añadirNum5()">5</button>
+                            <button type="button" class="btn btn-secondary btn-lg w-100 p-3 botones" onclick="añadirNum5()">5</button>
                         </td>
                         <td class="bg-secondary">
-                            <button type="button" class="btn btn-secondary btn-lg w-100 p-3" onclick="añadirNum4()">4</button>
+                            <button type="button" class="btn btn-secondary btn-lg w-100 p-3 botones" onclick="añadirNum4()">4</button>
                         </td>
                         <td class="bg-primary">
-                            <button type="button" class="btn btn-primary btn-lg w-100 p-3" onclick="añadirDiv()">/</button>
+                            <button type="button" class="btn btn-primary btn-lg w-100 p-3 botones" onclick="añadirDiv()">/</button>
                         </td>
                         <td class="bg-primary">
-                            <button type="button" class="btn btn-primary btn-lg w-100 p-3" onclick="añadirMult()">*</button>
+                            <button type="button" class="btn btn-primary btn-lg w-100 p-3 botones" onclick="añadirMult()">*</button>
                         </td>
                     </tr>
                     <tr>
                         <td class="bg-secondary">
-                            <button type="button" class="btn btn-secondary btn-lg w-100 p-3" onclick="añadirNum3()">3</button>
+                            <button type="button" class="btn btn-secondary btn-lg w-100 p-3 botones" onclick="añadirNum3()">3</button>
                         </td>
                         <td class="bg-secondary">
-                            <button type="button" class="btn btn-secondary btn-lg w-100 p-3" onclick="añadirNum2()">2</button>
+                            <button type="button" class="btn btn-secondary btn-lg w-100 p-3 botones" onclick="añadirNum2()">2</button>
                         </td>
                         <td class="bg-secondary">
-                            <button type="button" class="btn btn-secondary btn-lg w-100 p-3" onclick="añadirNum1()">1</button>
+                            <button type="button" class="btn btn-secondary btn-lg w-100 p-3 botones" onclick="añadirNum1()">1</button>
                         </td>
                         <td class="bg-primary">
-                            <button type="button" class="btn btn-primary btn-lg w-100 p-3" onclick="añadirSuma()">+</button>
+                            <button type="button" class="btn btn-primary btn-lg w-100 p-3 botones" onclick="añadirSuma()">+</button>
                         </td>
                         <td class="bg-primary">
-                            <button type="button" class="btn btn-primary btn-lg w-100 p-3" onclick="añadirResta()">-</button>
+                            <button type="button" class="btn btn-primary btn-lg w-100 p-3 botones" onclick="añadirResta()">-</button>
                         </td>
                     </tr>
                     <tr>
                         <td class="bg-secondary">
-                            <button type="button" class="btn btn-secondary btn-lg w-100 p-3" onclick="añadirPunto()">.</button>
+                            <button type="button" class="btn btn-secondary btn-lg w-100 p-3 botones" onclick="añadirPunto()">.</button>
                         </td>
                         <td class="bg-secondary">
-                            <button type="button" class="btn btn-secondary btn-lg w-100 p-3" onclick="añadirNum0()">0</button>
+                            <button type="button" class="btn btn-secondary btn-lg w-100 p-3 botones" onclick="añadirNum0()">0</button>
                         </td>
                         <td class="bg-secondary">
-                            <button type="button" class="btn btn-secondary btn-lg w-100 p-3" onclick="añadirNum00()">00</button>
+                            <button type="button" class="btn btn-secondary btn-lg w-100 p-3 botones" onclick="añadirNum00()">00</button>
                         </td>
                         <td colspan="2" class="bg-primary">
-                            <button type="button" class="btn btn-primary btn-lg w-100 p-3" onclick="resultado()">=</button>
+                            <button type="button" class="btn btn-primary btn-lg w-100 p-3 botones" onclick="resultado()">=</button>
                         </td>
                     </tr>
                 </table>
@@ -87,4 +91,5 @@
         </div>
     </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </html>
